MDEV-37430 sql_mode=ORACLE: TYPE definitions in PACKAGE BODY

Adding support for TYPE declarations for RECORDs and assoc arrays.